# chesspebase

./: .gitignore  CMakeLists.txt  README.md  license_header
cli/: CMakeLists.txt  README.md  license_header  main.cpp  query.hpp
cpb/: CMakeLists.txt  arena_allocator.cpp  arena_allocator.hpp  attribute_utils.hpp  database.hpp  fen_parser.cpp  fen_parser.hpp  formats.hpp  license_header  lichess.cpp  lichess.hpp  mode_operation.hpp  position.cpp  position.hpp  profiler.hpp  query.hpp  spsc.hpp  time.cpp  time.hpp
tests/: CMakeLists.txt  README.md  license_header  lichess_medium.csv  lichess_small.csv  test_bishops.cpp  test_castling.cpp  test_comparison.cpp  test_database_lichess.cpp  test_en_passant.cpp  test_knights.cpp  test_move_castling.cpp  test_move_pawn.cpp  test_move_pawn_en_passant.cpp  test_move_pawn_promotion.cpp  test_pawns.cpp  test_queens.cpp  test_rooks.cpp  test_turn.cpp
web/: CMakeLists.txt  README.md  license_header  package.json
web/css/: chessground_base.css  chessground_brown.css  chessground_cburnett.css  menu.css
web/html/: main.html
web/src-client/: cookies.ts  main.ts  query.ts  ui.ts
web/src-server/: app_router.cpp  app_router.hpp  app_router_controls.cpp  app_router_database.cpp  app_router_files.cpp  cookies.cpp  cookies.hpp  main.cpp  query.cpp  query.hpp  utils_files.hpp  utils_time.cpp  utils_time.hpp
web/src-server/utils/: files.hpp  time.cpp  time.hpp
